tests/partial-sigs/should_compile/T10463.hs
{-# LANGUAGE ScopedTypeVariables, PartialTypeSignatures #-}

module T10463 where

f (x :: _) = x ++ ""
